--- a/components/pg.blocks/css/_pgbackup/style-library-1_1473690402.css
+++ b/components/pg.blocks/css/_pgbackup/style-library-1_1473690402.css
@@ -524,9 +524,8 @@ body
 
 .guardsman-hover:hover
 {
-    color: #C2185B !important;
+    color: #D90000 !important;
 }
-
 
 .pomegranate-hover:hover
 {
