--- a/css/_pgbackup/agency.min_1473689277.css
+++ b/css/_pgbackup/agency.min_1473689277.css
@@ -202,8 +202,6 @@ a.active,a:active,a:focus,a:hover
         transition: padding .3s;
         border: none;
     }
-@media (min-width:768px)
-{
     .navbar-custom .navbar-brand
     {
         font-size: 2em;
@@ -211,8 +209,6 @@ a.active,a:active,a:focus,a:hover
         -moz-transition: all .3s;
         transition: all .3s;
     }
-}
-
     .navbar-custom .navbar-nav>.active>a
     {
         border-radius: 3px;
@@ -934,26 +930,17 @@ peta-acara
     .the-blur
     {
         position: fixed;
+        top: -30px;
         width: 100%;
-        min-height: 10%;
-        #background: #f7f7f7;
-        background-image: url('../img/anetnyu.jpg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        background-size: cover;
-        -o-background-size: cover;
-        text-align: center;
-        color: #fff;
+        min-height: 12%;
+        background: #f7f7f7;
         z-index: 1000;
-        -webkit-filter: blur(30px);
-        -moz-filter: blur(30px);
-        -o-filter: blur(30px);
-        -ms-filter: blur(30px);
-        filter: blur(30px);
-        display: block;
+        -webkit-filter: blur(40px);
+        -moz-filter: blur(40px);
+        -o-filter: blur(40px);
+        -ms-filter: blur(40px);
+        filter: blur(40px);
+        display:block;
     }
 }
 
