--- a/css/userdef.css
+++ b/css/userdef.css
@@ -160,3 +160,42 @@
   color: #556270;
   z-index: 1200;
 }
+
+/* Gambar Tengah */
+.gambar-tengah {
+ width: 32em;
+ height: 21em;
+ z-index: 1000;
+ position: absolute;
+ top: -16em;
+ left: 50%;
+ margin-left: -16em;
+}
+
+.gdocs-modal{
+  background-color: #d3eae9;
+}
+
+.fb-style-btn {
+  background-color: #3B5998 !important;
+}
+
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 5s linear alternate infinite;
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+.pigura {
+  position: absolute;
+  top:50%;
+  left:50%;
+}
